--- a/About.css
+++ b/About.css
@@ -1,4 +1,3 @@
-/* Basic Reset */
 * {
   margin: 0;
   padding: 0;
@@ -11,7 +10,6 @@ body {
   min-height: 100vh;
 }
 
-/* Header */
 .header {
   display: flex;
   justify-content: space-between;
@@ -31,20 +29,17 @@ body {
   text-align: right;
 }
 
-/* Main Layout */
 .main-container {
   display: flex;
   flex: 1;
   background-color: #494747;
 }
 
-/* Columns */
 .column {
   padding: 20px;
   background-color: #ddd;
 }
 
-/* Widths */
 .left {
   width: 12%;
   background-color: rgb(175, 175, 175);
@@ -56,10 +51,23 @@ body {
 }
 
 .center {
-  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
 }
 
-/* Footer */
+.content-box {
+  background-color: #ddd;
+  padding: 20px;
+}
+
+.content-box img {
+  width: 40%;
+  height: auto;
+  padding: 20px;
+}
+
 .footer {
   padding: 20px;
   text-align: center;
