--- a/Home.css
+++ b/Home.css
@@ -1,4 +1,3 @@
-/* Basic Reset */
 * {
   margin: 0;
   padding: 0;
@@ -11,7 +10,6 @@ body {
   min-height: 100vh;
 }
 
-/* Header */
 .header {
   display: flex;
   justify-content: space-between;
@@ -31,14 +29,12 @@ body {
   text-align: right;
 }
 
-/* Main Layout */
 .main-container {
   display: flex;
   flex: 1;
   background-color: #494747;
 }
 
-/* Columns */
 .column {
   padding: 20px;
   background-color: #ddd;
@@ -55,8 +51,10 @@ body {
 }
 
 .text-box {
+  display: flex;
   padding: 20px;
-  text-align: left;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   max-width: 400px;
 }
@@ -65,7 +63,7 @@ body {
   max-width: 300px;
   width: 100%;
 }
-/* Widths */
+
 .left {
   width: 12%;
   background-color: rgb(175, 175, 175);
@@ -76,7 +74,6 @@ body {
   background-color: rgb(175, 175, 175);
 }
 
-/* Footer */
 .footer {
   padding: 20px;
   text-align: center;
